--- a/assets/estilo.css
+++ b/assets/estilo.css
@@ -145,7 +145,7 @@ section {
 .home .slide .content span {
     font-size: 2rem;
     font-weight: bold;
-    color: #71D30D;
+    color: #35C01C;
     display: block;
 }
 
@@ -225,10 +225,13 @@ section {
 }
 
 .about .content .box-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin-top: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+    gap: 1.5rem;
+}
+
+.about .content .box-container .btn {
+    max-width: 130px;
 }
 
 .about .content .box-container .box {
@@ -297,4 +300,250 @@ section {
     font-size: 1.5rem;
     color: #aaa;
     padding: 1rem 0;
+}
+
+.pricing {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+    gap: 1.5rem;
+}
+
+.pricing .information span {
+    font-size: 2rem;
+    color: #71D30D;
+}
+
+.pricing .information h3 {
+    font-size: 4rem;
+    padding-top: .5rem;
+    color: #fff;
+}
+
+.pricing .information p {
+    line-height: 2;
+    padding: 1rem 0;
+    font-size: 1.5rem;
+    color: #aaa;
+}
+
+.pricing .information p i {
+    padding-right: 1rem;
+    color: #2BAB2B;
+}
+
+.pricing .plan {
+    text-align: center;
+    padding: 2rem;
+}
+
+.pricing .plan.basic {
+    background: linear-gradient(130deg, #111 93%, transparent 90%);
+}
+
+.pricing .plan {
+    background: linear-gradient(130deg, #1111114f 93%, transparent 90%);
+}
+
+.plan h3 {
+    font-size: 2.5rem;
+    margin: 1rem 0;
+    color: #fff;
+}
+
+.plan.basic h3 span {
+    color: #ECC87A;
+}
+
+.plan h3 span {
+    color: #666708;
+}
+
+.plan .price {
+    font-size: 5rem;
+    font-weight: bolder;
+    color: rgb(1, 235, 2);
+}
+
+.plan .price span {
+    color: #fff;
+    font-size: 2rem;
+}
+
+.plan .list {
+    padding: 1rem 0;
+}
+
+.plan .list p {
+    line-height: 2;
+    padding: 1rem 0;
+    font-size: 1.4rem;
+    color: #aaa;
+}
+
+.plan .list p i {
+    padding-right: 1rem;
+    color: rgb(1, 235, 2);
+    color: #2BAB2B #71D30D;
+}
+
+.trainers .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+    gap: 1.5rem;
+}
+
+.trainers .box-container .box {
+    height: 40rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.trainers .box-container .box:hover .content {
+    transform: translateY(0);
+}
+
+.trainers .box-container .box img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.trainers .box-container .box .content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #111;
+    padding: 2rem;
+    transform: translateY(6.5rem);
+}
+
+.trainers .box-container .box .content span {
+    font-size: 1.5rem;
+    color: rgb(1, 235, 2);
+}
+
+.trainers .box-container .box .content h3 {
+    font-size: 2rem;
+    color: #fff;
+    padding-top: .5rem;
+}
+
+.trainers .box-container .box .content .share {
+    padding-top: 2rem;
+    margin-top: 1.5rem;
+    border-top: 0.1rem solid #aaa;
+}
+
+.trainers .box-container .box .content .share a {
+    font-size: 2rem;
+    color: #fff;
+    margin-right: 1.5rem;
+}
+
+.trainers .box-container .box .content .share a:hover {
+    color: #71D30D;
+}
+
+.banner {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/banner.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    text-align: center;
+}
+
+.banner span {
+    font-size: 2rem;
+    color: #2BAB2B;
+}
+
+.banner h3 {
+    padding-top: 1rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 3.5rem;
+}
+
+.banner p {
+    margin: 1rem auto;
+    max-width: 60rem;
+    font-size: 1.5rem;
+    color: #aaa;
+    line-height: 2;
+}
+
+.review {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.review .information {
+    flex: 1 1 35rem;
+}
+
+.review .information span {
+    font-size: 2rem;
+    color: #71D30D;
+}
+
+.review .information h3 {
+    font-size: 3rem;
+    color: #fff;
+    padding-top: 1rem;
+}
+
+.review .information p {
+    font-size: 1.5rem;
+    line-height: 2;
+    color: #aaa;
+    padding: 1rem 0;
+}
+
+.review .review-slider {
+    flex: 1 1 60rem;
+}
+
+.review .review-slider .slide {
+    background: linear-gradient(130deg, #111 93%, transparent 90%);
+    padding: 2rem 3rem;
+}
+
+.review .review-slider .slide p {
+    font-size: 1.5rem;
+    line-height: 2;
+    color: #aaa;
+}
+
+.review .review-slider .slide .user {
+    display: flex;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+
+.review .review-slider .slide .user img {
+    height: 5rem;
+    width: 5rem;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.review .review-slider .slide .user h3 {
+    font-size: 2rem;
+    color: #fff;
+}
+
+.review .review-slider .slide .user span {
+    color: rgb(1, 235, 2);
+    font-size: 1.5rem;
+}
+
+.review .review-slider .slide .user i {
+    font-size: 5rem;
+    margin-left: auto;
+    margin-right: 2rem;
+    color: rgb(1, 235, 2);
 }
